--- a/furuma_manager/src/main/resources/application.properties
+++ b/furuma_manager/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/furuma_module_4?createDatabaseIfNotExist=true&useSSL-false
+spring.datasource.url=jdbc:mysql://localhost:3306/furama_resort?createDatabaseIfNotExist=true&useSSL-false
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
